# sitoitapi

./: .dir-locals.el  .stylish-haskell.yaml  LICENSE  README.md  application.config  default.nix  do.nix  haskell-pkgs.nix  hlint.nix  shell.nix  sitoitapi-configuration.nix  sitoitapi-ec2.nix  sitoitapi-virtualbox.nix  sitoitapi.cabal
app/: Main.hs
src/: API.hs  Api.hs  App.hs  Authentication.hs  Init.hs  Lib.hs
src/Config/: Config.hs  Types.hs
src/Flashcard/: API.hs  Types.hs
src/Logger/: Types.hs
src/User/: API.hs  Types.hs
test/sitoit/: ExampleSpec.hs
