cabal-version: 2.1

name:           sitoitapi
version:        0.1.0.0
license-file:   LICENSE
author:         Jonatan Borkowski
maintainer:     Jonatan Borkowski
copyright:      Jonatan Borkowski
category:       Unclassified
build-type:     Simple

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/jborkowski/sitoitapi

library
  exposed-modules:
      Init
      Config.Config
      Config.Types
      API
      Authentication
      User.API
      User.Types
      Flashcard.API
      Flashcard.Types
      App
  hs-source-dirs:
      src
  build-depends:
        base >=4.10 && <5
      , text >=1.2
      , mtl
      , time
      , bcrypt
      , uuid
      , aeson >=1.5
      , containers >=0.6
      , servant >=0.18
      , servant-server >=0.18
      , servant-auth ==0.4.*
      , servant-auth-server >=0.4.6.0
      , warp >=3.3
      , wai >=3.2
      , http-types >=0.12.2
      , markdown-unlit >=0.4
      , http-client >=0.5
      , bytestring >=0.10
      , postgresql-simple
      , resource-pool
      , transformers
      , configurator
      , fast-logger
      , exceptions
  default-language: Haskell2010

executable sitoitapi-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.10 && <5
    , sitoitapi
    , servant-server
    , servant-auth-server
    , warp
  default-language: Haskell2010

test-suite sitoitapi-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    ExampleSpec
  -- dependencies in library
  build-depends:
    , base
    , hspec
    , hedgehog
    , hspec-hedgehog
    , sitoitapi
  build-tool-depends: hspec-discover:hspec-discover == 2.*
